Added unique value proposition and call-to-action button to landing page with background image

--- a/index.html
+++ b/index.html
@@ -13,10 +13,45 @@
 </head>
 
 <body>
+    <section class="hero has-background-dark is-fullheight custom-hero-background">
+        <!-- Hero head: will stick at the top -->
+        <div class="hero-head">
+            <header class="navbar">
+                <div class="container">
+                    <div class="navbar-brand">
+                        <a class="navbar-item has-text-white">
+                            Apprenticity
+                        </a>
+                    </div>
+                </div>
+            </header>
+        </div>
 
+        <!-- Hero content: will be in the middle -->
+        <div class="hero-body is-paddingless">
+            <div class="container has-text-centered">
+                <h1 class="title has-text-white is-2" style="position: relative; top: -10vh">
+                    Be a <em class="has-text-info">Great</em> Electrician's Apprentice
+                </h1>
+                <h2 class="subtitle has-text-white" style="position: relative; top: -8vh">
+                   Apprenticity is the <span class="has-text-info">simple</span> online quiz resource for electricity students.
+                </h2>
+
+                <a href="chapters.html" class="button custom-button-width is-info has-text-weight-semibold" style="height: 40px">
+                    Get Started
+                    <br>
+                    <i class="fas fa-bolt"></i>
+                </a>
+            </div>
+        </div>
+
+        <!-- Hero footer: will stick at the bottom -->
+        <div class="hero-foot">
+        </div>
+    </section>
 
     <!-- Scripts -->
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
 </body>
 
 </html>
