Added supplementary pages, UI framework, and license information

--- a/keywords.html
+++ b/keywords.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Online Quizzes for Electricity Students - Apprentricity</title>
+    <title>Online Quizzes for Electricity Students - Apprenticity</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
@@ -20,7 +20,7 @@
                 <div class="container">
                     <div class="navbar-brand">
                         <a class="navbar-item has-text-white">
-                            Apprentricity
+                            Apprenticity
                         </a>
                     </div>
                 </div>
@@ -34,7 +34,8 @@
                     Be a <em class="has-text-info">Great</em> Electrician's Apprentice
                 </h1>
                 <h2 class="subtitle has-text-white" style="position: relative; top: -8vh">
-                   Apprentricity is the <span class="has-text-info">simple</span> online quiz resource for electricity students.
+                    Apprenticity is the <span class="has-text-info">simple</span> online quiz resource for electricity
+                    students.
                 </h2>
 
                 <a href="chapters.html" class="button custom-button-width is-info has-text-weight-semibold" style="height: 40px">
