--- a/about.html
+++ b/about.html
@@ -34,7 +34,8 @@
                     Be a <em class="has-text-info">Great</em> Electrician's Apprentice
                 </h1>
                 <h2 class="subtitle has-text-white" style="position: relative; top: -8vh">
-                   Apprentricity is the <span class="has-text-info">simple</span> online quiz resource for electricity students.
+                    Apprentricity is the <span class="has-text-info">simple</span> online quiz resource for electricity
+                    students.
                 </h2>
 
                 <a href="chapters.html" class="button custom-button-width is-info has-text-weight-semibold" style="height: 40px">
