Added copy to instructions page, renamed keywords page to resources

--- a/instructions.html
+++ b/instructions.html
@@ -13,46 +13,169 @@
 </head>
 
 <body>
-    <section class="hero has-background-dark is-fullheight custom-hero-background">
-        <!-- Hero head: will stick at the top -->
-        <div class="hero-head">
-            <header class="navbar">
-                <div class="container">
-                    <div class="navbar-brand">
-                        <a class="navbar-item has-text-white">
-                            Apprenticity
-                        </a>
-                    </div>
-                </div>
-            </header>
+    <nav class="navbar has-background-info" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <a class="navbar-item has-text-white" href="/chapters.html">
+                Apprentricity
+            </a>
+
+            <a id="mobile-menu-button" class="navbar-burger has-text-white">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
         </div>
 
-        <!-- Hero content: will be in the middle -->
-        <div class="hero-body is-paddingless">
-            <div class="container has-text-centered">
-                <h1 class="title has-text-white is-2" style="position: relative; top: -10vh">
-                    Be a <em class="has-text-info">Great</em> Electrician's Apprentice
-                </h1>
-                <h2 class="subtitle has-text-white" style="position: relative; top: -8vh">
-                    Apprenticity is the <span class="has-text-info">simple</span> online quiz resource for electricity
-                    students.
-                </h2>
-
-                <a href="chapters.html" class="button custom-button-width is-info has-text-weight-semibold" style="height: 40px">
-                    Get Started
-                    <br>
-                    <i class="fas fa-bolt"></i>
+        <div class="navbar-menu">
+            <div class="navbar-end">
+                <a href="about.html" class="navbar-item has-text-white">
+                    About
+                </a>
+                <a href="instructions.html" class="navbar-item has-text-white">
+                    Instructions
+                </a>
+                <a href="resources.html" class="navbar-item has-text-white">
+                    Resources
                 </a>
             </div>
         </div>
+    </nav>
 
-        <!-- Hero footer: will stick at the bottom -->
-        <div class="hero-foot">
+    <section class="section">
+        <div class="container">
+            <h1 class="title has-text-weight-bold" style="margin-bottom: 50px">Instructions
+            </h1>
+            <h2 class="subtitle">
+                You can use Apprentricity to study in 3 easy steps:
+            </h2>
         </div>
     </section>
 
+    <section class="section">
+        <div class="container has-text-centered">
+            <div class="columns">
+                <div class="column has-text-left">
+                    <h3 class="subtitle has-text-weight-semibold">1. Choose Your Chapter</h3>
+                    <p>
+                        Quizzes on Apprentricity are organized as multiple choice selections taken
+                        directly from the <span class="has-text-info">Textbook</span>. Pick the one
+                        you need most help with.
+                    </p>
+                </div>
+                <div class="column has-text-left">
+                    <h3 class="subtitle has-text-weight-semibold">2. Take A Quiz</h3>
+                    <p>
+                        Every quiz is a made up of a series of 15 questions from each chapter. Take a
+                        quiz muliple times to help yourself retain the information. The quizzes will
+                        never contain trick questions.
+                    </p>
+                </div>
+                <div class="column has-text-left">
+                    <h3 class="subtitle has-text-weight-semibold">3. See Your Results</h3>
+                    <p>
+                        Compare your answers to the test bank to see how well you did. If you feel like
+                        you got it, great! And if you feel like you could use more practice, no problem.
+                        Just take another quiz.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container has-text-centered">
+            <div class="columns">
+                <div class="column has-text-left">
+                    <h3 class="subtitle has-text-weight-semibold">Apprentricity Resources</h3>
+                    <p>
+                        Along with the simple quizzes, you can find a selection of helpful resources
+                        to assist you with your studies. The <a href="resources.html" class="has-text-info">Resources</a>
+                        page features a keyword glossary
+                        organized by chapter, a list of references to the National Electrical Code (NEC), and videos
+                        you to get you
+                        excited about the trade.
+                    </p>
+                    <br>
+                    <p>
+                        If there's ever any resource you'd like to see added, please send an email to
+                        Apprentricity[at]grindfusion.com.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container has-text-centered">
+            <div class="columns">
+                <div class="column has-text-left">
+                    <h3 class="subtitle has-text-weight-semibold">Reporting Errors & Bugs <i class="fas fa-bug"></i>
+                    </h3>
+                    <p>
+                        I try my best to keep this website simple and free of errors in code and material. However, I
+                        cannot guarantee this website will be without problems. In the event you find an error 
+                        (e.g. grammar, misspellings, dead links, etc.) please let me know.
+                    </p>
+                    <br>
+                    <p>
+                        Send what you find to Apprentricity-Errors[at]grindfusion.com, and I'll handle it as soon as I can.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <div class="container has-text-centered">
+            <div class="notification">
+                <p class="subtitle has-size-6">
+                    Anyone who stops learning is old, whether at twenty or eighty. Anyone who keeps learning stays
+                    young.
+                    The greatest thing in life is to keep your mind young. - Henry Ford
+                </p>
+            </div>
+        </div>
+    </section>
+
+
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p>
+                <strong>Apprentricity</strong> by <a href="https://twitter.com/buildpax">David Gagne</a>. The source
+                code is licensed
+                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. <br> The website content is licensed
+                <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC
+                        BY-NC-SA 4.0</a> <br><br>
+            </p>
+        </div>
+    </footer>
+
+    <!-- Contextually Hidden UI Elements -->
+    <div id="mobile-menu" class="container is-pulled-right has-background-dark is-menu-modal has-text-centered">
+        <div class="menu" style="position: relative; top: 10vh">
+            <p class="menu-label">
+                <br> <!-- Spacer for Presentation -->
+                Apprentricity Logo
+                <br> <!-- Spacer for Presentation -->
+                <br> <!-- Spacer for Presentation -->
+            </p>
+            <ul>
+                <li><a href="about.html" class="has-text-white has-text-weight-semibold">About</a></li>
+                <li><a href="instructions.html" class="has-text-white has-text-weight-semibold">Instructions</a></li>
+                <li><a href="resources.html" class="has-text-white has-text-weight-semibold">Resources</a></li>
+                <br> <!-- Spacer for Presentation -->
+                <br> <!-- Spacer for Presentation -->
+                <p class="has-text-white">
+                    Got an idea for a new feature?
+                </p>
+                <br> <!-- Spacer for Presentation -->
+                <li>
+                    <a class="button is-info custom-button-width has-text-weight-semibold custom-button-width">Submit
+                        Idea</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
     <!-- Scripts -->
-    <!-- <script src="main.js"></script> -->
+    <script src="main.js"></script>
 </body>
 
 </html>
