--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
                 <a href="instructions.html" class="navbar-item has-text-white">
                     Instructions
                 </a>
-                <a href="keywords.html" class="navbar-item has-text-white">
-                    Keywords
+                <a href="resources.html" class="navbar-item has-text-white">
+                    Resources
                 </a>
             </div>
         </div>
@@ -43,7 +43,7 @@
 
     <section class="section main-section">
         <div class="container">
-            <h1 class="title" style="margin-bottom: 50px">About Apprentricity
+            <h1 class="title has-text-weight-semibold" style="margin-bottom: 50px">About Apprentricity
             </h1>
             <h2 class="subtitle has-text-weight-normal">
                 <em>Down to <i class="fas fa-globe-americas has-text-info"></i> study tools for electricity students.</em>
@@ -79,7 +79,7 @@
 
 
     <footer class="footer">
-        <div class="content has-text-centered" style="position: relative; top: 30px">
+        <div class="content has-text-centered">
             <p>
                 <strong>Apprentricity</strong> by <a href="https://twitter.com/buildpax">David Gagne</a>. The source
                 code is licensed
@@ -102,7 +102,7 @@
             <ul>
                 <li><a href="about.html" class="has-text-white has-text-weight-semibold">About</a></li>
                 <li><a href="instructions.html" class="has-text-white has-text-weight-semibold">Instructions</a></li>
-                <li><a href="keywords.html" class="has-text-white has-text-weight-semibold">Keywords</a></li>
+                <li><a href="resources.html" class="has-text-white has-text-weight-semibold">Resources</a></li>
                 <br> <!-- Spacer for Presentation -->
                 <br> <!-- Spacer for Presentation -->
                 <p class="has-text-white">
