Added resources page and initil ui elements

--- a/instructions.html
+++ b/instructions.html
@@ -58,7 +58,7 @@
                     <h3 class="subtitle has-text-weight-semibold">1. Choose Your Chapter</h3>
                     <p>
                         Quizzes on Apprentricity are organized as multiple choice selections taken
-                        directly from the <span class="has-text-info">Textbook</span>. Pick the one
+                        directly from the <a href="resources.html#textbook" class="has-text-info">Textbook</a>. Pick the one
                         you need most help with.
                     </p>
                 </div>
@@ -89,8 +89,8 @@
                     <p>
                         Along with the simple quizzes, you can find a selection of helpful resources
                         to assist you with your studies. The <a href="resources.html" class="has-text-info">Resources</a>
-                        page features a keyword glossary
-                        organized by chapter, a list of references to the National Electrical Code (NEC), and videos
+                        page features a keyword glossary reference
+                        organized by chapter, as well as a list of references to the National Electrical Code (NEC), and videos
                         you to get you
                         excited about the trade.
                     </p>
