Updated pages to limit audience scope to ATC students.

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             <h1 class="title has-text-weight-semibold" style="margin-bottom: 50px">About Apprentricity
             </h1>
             <h2 class="subtitle has-text-weight-normal">
-                <em>Down to <i class="fas fa-globe-americas has-text-info"></i> study tools for electricity students.</em>
+                <em>Down to <i class="fas fa-globe-americas has-text-info"></i> study tools for electricity students at Atlantic Technical College.</em>
                 <br>
                 <br>
                 If you're in school studying for a career as a professional electrician, you're probably filled with
