--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
                     Be a <em class="has-text-info">Great</em> Electrician's Apprentice
                 </h1>
                 <h2 class="subtitle has-text-white" style="position: relative; top: -8vh">
-                   Apprentricity is the <span class="has-text-info">simple</span> online quiz resource for electricity students.
+                    Apprentricity is the <span class="has-text-info">simple</span> online quiz and study tool for
+                    electricity
+                    students at <span class="has-text-weight-bold">Atlantic Technical College</span>.
+
+                    <i class="has-text-info fas fa-asterisk fa-xs"></i>
+
                 </h2>
 
                 <a href="chapters.html" class="button custom-button-width is-info has-text-weight-semibold" style="height: 40px">
@@ -47,6 +52,14 @@
 
         <!-- Hero footer: will stick at the bottom -->
         <div class="hero-foot">
+            <div class="container has-text-centered">
+                <p class="subtitle has-text-weight-light is-size-7" style="padding:20px">
+                    <span><i class="has-text-info fas fa-asterisk fa-xs"></i></span>
+                     Atlantic Technical College is not affiliated with this website. The views and opinions
+                     expressed on this website do not necessarily reflect those of Atlantic Technical College
+                     and its affiliates.
+                </p>
+            </div>
         </div>
     </section>
 
