--- a/resources.html
+++ b/resources.html
@@ -91,20 +91,12 @@
                     <ul>
                         <li class="margin-bottom-li" id="textbook">
                             <p>
-                                <span class="has-text-info has-text-weight-semibold">Textbook</span>
-                                <br>
-                                <em>Electrical Wiring - Residential (19th Edition)</em>
-                                <br>
-                                by Ray C. Mullin & Phill Simmons
+
                             </p>
                         </li>
                         <li class="margin-bottom-li" id="codebook">
                             <p>
-                                <span class="has-text-info has-text-weight-semibold">Code Book</span>
-                                <br>
-                                <em>NFPA 70 - National Electrical Code, International Code&reg; Series</em>
-                                <br>
-                                by National Fire Protection Association (NFPA)
+
                             </p>
                         </li>
                     </ul>
@@ -114,7 +106,10 @@
     </section>
     <section class="section" style="padding-top: 0">
         <div class="container">
-            <h3 class="subtitle has-text-weight-semibold">Glossary Reference</h3>
+            <h3 class="subtitle has-text-weight-semibold" style="margin-bottom: 5px">Glossary Reference</h3>
+            <p style="padding-bottom: 20px">Use the dropdown menu to select the chapter you're on. There you'll see a breakdown
+                of page numbers that reference the keyword glossary in the textbook.</a>
+            </p>
             <div class="dropdown">
                 <div class="dropdown-trigger">
                     <button class="button">
