Changed padding on index page title and subtitle elements

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <!-- Hero content: will be in the middle -->
         <div class="hero-body is-paddingless">
             <div class="container has-text-centered">
-                <h1 class="title has-text-white is-2" style="position: relative; top: -10vh">
+                <h1 class="title has-text-white is-2">
                     Be a <em class="has-text-info">Great</em> Electrician's Apprentice
                 </h1>
-                <h2 class="subtitle has-text-white" style="position: relative; top: -8vh">
+                <h2 class="subtitle has-text-white">
                     Apprentricity is the <span class="has-text-info">simple</span> online quiz and study tool for
                     electricity
                     students at <span class="has-text-weight-bold">Atlantic Technical College</span>.
@@ -53,7 +53,7 @@
         <!-- Hero footer: will stick at the bottom -->
         <div class="hero-foot">
             <div class="container has-text-centered">
-                <p class="subtitle has-text-weight-light is-size-7" style="padding:20px">
+                <p class="subtitle has-text-weight-light" style="font-size: x-small">
                     <span><i class="has-text-info fas fa-asterisk fa-xs"></i></span>
                      Atlantic Technical College is not affiliated with this website. The views and opinions
                      expressed on this website do not necessarily reflect those of Atlantic Technical College
